# .dotfiles

./: .agents  .gitignore  .gitleaksignore  AGENTS.md  AutoHotkey.ahk  CLAUDE.md  GLOBAL-AGENTS.md  LICENCE.md  LICENSE.md  Makefile  README.md  RProfile  Rprofile  aliases  anu-cs-utils.el  asdfrc  bash_profile  bash_profile.linux  bash_profile.osx  bashrc  ben-utils.el  brew  codex.md  create-symlinks.sh  create_symlinks.sh  deps.edn  doom-config.el  doom-init.el  doom-packages.el  emacs  eshell-alias  exports  extempore-debovinator.el  fnox.toml  gitconfig  gitconfig.redacted  gitignore  hgrc  himalaya.toml  init.el  (+28 more)
.claude/: README.md  (+1 more)
mail/utils/: CLAUDE.md  README.md  analyze_maildir_format.py  copy_msg_path.py  deduplicate_maildir.py  extract_unique_messages.py  fix_anu_archive_duplicates.sh  fix_maildir_timestamps.py  nuclear_archive_cleanup.sh  process_batch.sh  pyproject.toml  remove-duplicates.sh  sync_with_retry.sh  test_date_preservation.sh  test_date_preservation_safe.sh  test_date_preservation_simple.sh
mail/utils/src/mail_utils/: __init__.py  accounts.py  clipboard.py  compose.py  email.py  maildir.py  mu.py  urls.py
mail/utils/src/mail_utils/cli/: __init__.py  analyze.py  compose.py  copy_attachment_name.py  copy_id.py  copy_path.py  dedupe.py  fix_timestamps.py  studentdb.py  urls.py
mail/utils/src/mail_utils/lsp/: __init__.py
mail/utils/tests/: __init__.py  conftest.py  test_clipboard.py  test_compose.py  test_copy_attachment_name.py  test_dedupe.py  test_email.py  test_lsp.py  test_maildir.py  test_mu.py  test_studentdb.py  test_urls.py
(+743 files in other folders)
